# labs_4_sem

./: CMakeLists.txt  LICENSE  README.md
Tasks/FA/: 2425 ФА 5.docx  2425 ФА 6.docx
Tasks/SP/: 2425 МАИ СП 2.docx  2425 МАИ СП 3.docx
logger/client_logger/: CMakeLists.txt
logger/client_logger/tests/: CMakeLists.txt
logger/logger/include/: logger.h  logger_builder.h  logger_guardant.h
logger/logger/src/: logger.cpp  logger_builder.cpp  logger_guardant.cpp
logger/server_logger/: CMakeLists.txt
logger/server_logger/tests/: CMakeLists.txt
